# nodifyr-firmware

./: README.md
.cursor/: mcp.json
apps/cellular-gateway/: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  sysbuild.conf
apps/cellular-gateway/boards/: nrf9151dk_nrf9151_ns.conf  thingy91x_nrf9151_ns.conf
apps/cellular-gateway/scripts/: README.md
apps/cellular-gateway/src/: battery.c  battery.h  device_config.c  device_config.h  https_client.c  https_client.h  identity.c  identity.h  json_util.c  json_util.h  lte.c  lte.h  main.c  nodifyr_common.h  pairing.c  pairing.h  radar_stub.c  radar_stub.h  telemetry.c  telemetry.h
docs/: cellular-gateway-setup.md  cellular-pairing-handoff.md
esp-test/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
esp-test-DO_NOT_USE/main/: Kconfig.projbuild  anim.c  anim.h  ble_scan.c  ble_scan.h  scan_store.h  uploader.c
esp-test/main/: CMakeLists.txt  ble_display.c  ble_display.h  dns_server.c  dns_server.h  main.c  nvs_config.c  nvs_config.h  oled.c  oled.h  provision.c  provision.h  scan_store.c  sensor_packet.c  sensor_packet.h  uploader.h  wifi.c  wifi.h
